example/java/jimmer-sql/src/main/java/org/babyfish/jimmer/sql/example/bll/error/BusinessErrorCode.java
package org.babyfish.jimmer.sql.example.bll.error;

import org.babyfish.jimmer.error.ErrorFamily;
import org.babyfish.jimmer.error.ErrorField;

import java.math.BigDecimal;

@ErrorFamily
public enum BusinessErrorCode {

    GLOBAL_TENANT_REQUIRED
}
